LootSorter Updates